[tool.poetry]
name = "python-kohonen"
version = "0.1.0"
description = ""
authors = ["Bentroen <bemcdc@gmail.com>"]
readme = "README.md"
packages = [{include = "python_kohonen"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5.0"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
rich = {extras = ["jupyter"], version = "^13.4.1"}
pandas = "^2.0.2"
numpy = "^1.25.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
